src/test/ui/E0594.ast.stderr
error[E0594]: cannot assign to immutable static item
  --> $DIR/E0594.rs:7:5
   |
LL |     NUM = 20;
   |     ^^^^^^^^

error: aborting due to previous error

